# crypto-price-aggregator

./: Cargo.toml  README.md
src/: api.rs  fetch.rs  main.rs  model.rs  util.rs  utils.rs
src/exchanges/: binance.rs  coinbase.rs  kraken.rs  mod.rs
